# Nybble

./: .gitignore  CLAUDE.md  CLEANUP.md  Cargo.toml  README.md  cdc.txt
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: expr.rs  fixed.rs  float.rs  lib.rs  ops.rs  parse.rs  value.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: app.rs  changelog.rs  main.rs  settings.rs  theme.rs  update.rs
crates/gui/src/app/: batch.rs  layout.rs  mod.rs  sections.rs
crates/gui/src/widgets/: bitgrid.rs  icons.rs  mod.rs
docs/: api-contracts-core.md  architecture-core.md  architecture-gui.md  component-inventory-gui.md  development-guide.md  expressions.md  index.md  integration-architecture.md  powercalc-plan.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md
resources/design/fpga-calculator-gui-modernization/: README.md
resources/design/fpga-calculator-gui-modernization/chats/: chat1.md
resources/design/fpga-calculator-gui-modernization/project/: .thumbnail  PowerCalc.dc.html
