[package]
name = "powercalc-gui"
version = "0.1.0"
edition = "2021"
description = "Desktop GUI for PowerCalc, built on eframe/egui."

[[bin]]
name = "powercalc"
path = "src/main.rs"

[dependencies]
powercalc-core = { path = "../core" }
# Use the glow (OpenGL) backend rather than the default wgpu/Vulkan one: glow is
# more reliable under WSLg and lighter on dependencies. accesskit is dropped
# because it needs a D-Bus session at runtime, which WSL often lacks.
eframe = { version = "0.34", default-features = false, features = [
    "glow",
    "default_fonts",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.34"
