[package]
name = "nybble-gui"
version = "1.0.0"
edition = "2021"
description = "Desktop GUI for Nybble, built on eframe/egui."

[[bin]]
name = "nybble"
path = "src/main.rs"

[features]
# Enables eframe's screenshot support: with this feature on, setting the
# `EFRAME_SCREENSHOT_TO=/path.png` env var saves a screenshot and exits.
screenshot = ["eframe/__screenshot"]

[dependencies]
nybble-core = { path = "../core" }
# Use the glow (OpenGL) backend rather than the default wgpu/Vulkan one: glow is
# more reliable under WSLg and lighter on dependencies. accesskit is dropped
# because it needs a D-Bus session at runtime, which WSL often lacks.
eframe = { version = "0.34", default-features = false, features = [
    "glow",
    "default_fonts",
    "persistence",
] }
egui = "0.34"
# rustls keeps the Windows build self-contained; zip-deflate matches the CI asset format.
self_update = { version = "0.41", default-features = false, features = [
    "rustls",
    "compression-zip-deflate",
] }

# The x11 backend is Linux-only; keep it off Windows/macOS builds. Cargo unions
# features for the same crate, so on Linux eframe still gets x11 as before.
[target.'cfg(unix)'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["x11"] }
